--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -856,6 +856,7 @@ set(SOURCES
         util/random.cc
         util/rate_limiter.cc
         util/ribbon_config.cc
+        ribbon_compare_bloom/hbase_bloom_impl.cc
         util/slice.cc
         util/file_checksum_helper.cc
         util/status.cc
@@ -1260,205 +1261,207 @@ if(WITH_TESTS)
   )
   if(WITH_ALL_TESTS)
     list(APPEND TESTS
-        cache/cache_reservation_manager_test.cc
-        cache/cache_test.cc
-        cache/compressed_secondary_cache_test.cc
-        cache/lru_cache_test.cc
-        cache/tiered_secondary_cache_test.cc
-        db/blob/blob_counting_iterator_test.cc
-        db/blob/blob_file_addition_test.cc
-        db/blob/blob_file_builder_test.cc
-        db/blob/blob_file_cache_test.cc
-        db/blob/blob_file_garbage_test.cc
-        db/blob/blob_file_reader_test.cc
-        db/blob/blob_garbage_meter_test.cc
-        db/blob/blob_source_test.cc
-        db/blob/db_blob_basic_test.cc
-        db/blob/db_blob_compaction_test.cc
-        db/blob/db_blob_corruption_test.cc
-        db/blob/db_blob_index_test.cc
-        db/column_family_test.cc
-        db/compact_files_test.cc
-        db/compaction/clipping_iterator_test.cc
-        db/compaction/compaction_job_stats_test.cc
-        db/compaction/compaction_job_test.cc
-        db/compaction/compaction_iterator_test.cc
-        db/compaction/compaction_picker_test.cc
-        db/compaction/compaction_service_test.cc
-        db/compaction/tiered_compaction_test.cc
-        db/comparator_db_test.cc
-        db/corruption_test.cc
-        db/cuckoo_table_db_test.cc
-        db/db_readonly_with_timestamp_test.cc
-        db/db_with_timestamp_basic_test.cc
-        db/db_block_cache_test.cc
-        db/db_bloom_filter_test.cc
-        db/db_compaction_filter_test.cc
-        db/db_compaction_test.cc
-        db/db_clip_test.cc
-        db/db_dynamic_level_test.cc
-        db/db_encryption_test.cc
-        db/db_flush_test.cc
-        db/db_inplace_update_test.cc
-        db/db_io_failure_test.cc
-        db/db_iter_test.cc
-        db/db_iter_stress_test.cc
-        db/db_iterator_test.cc
-        db/db_kv_checksum_test.cc
-        db/db_log_iter_test.cc
-        db/db_memtable_test.cc
-        db/db_merge_operator_test.cc
-        db/db_merge_operand_test.cc
-        db/db_options_test.cc
-        db/db_properties_test.cc
-        db/db_range_del_test.cc
-        db/db_rate_limiter_test.cc
-        db/db_secondary_test.cc
-        db/db_sst_test.cc
-        db/db_statistics_test.cc
-        db/db_table_properties_test.cc
-        db/db_tailing_iter_test.cc
-        db/db_test.cc
-        db/db_test2.cc
-        db/db_logical_block_size_cache_test.cc
-        db/db_universal_compaction_test.cc
-        db/db_wal_test.cc
-        db/db_with_timestamp_compaction_test.cc
-        db/db_write_buffer_manager_test.cc
-        db/db_write_test.cc
-        db/dbformat_test.cc
-        db/deletefile_test.cc
-        db/error_handler_fs_test.cc
-        db/obsolete_files_test.cc
-        db/external_sst_file_basic_test.cc
-        db/external_sst_file_test.cc
-        db/fault_injection_test.cc
-        db/file_indexer_test.cc
-        db/filename_test.cc
-        db/flush_job_test.cc
-        db/import_column_family_test.cc
-        db/listener_test.cc
-        db/log_test.cc
-        db/manual_compaction_test.cc
-        db/memtable_list_test.cc
-        db/merge_helper_test.cc
-        db/merge_test.cc
-        db/options_file_test.cc
-        db/perf_context_test.cc
-        db/periodic_task_scheduler_test.cc
-        db/plain_table_db_test.cc
-        db/seqno_time_test.cc
-        db/prefix_test.cc
-        db/range_del_aggregator_test.cc
-        db/range_tombstone_fragmenter_test.cc
-        db/repair_test.cc
-        db/table_properties_collector_test.cc
-        db/version_builder_test.cc
-        db/version_edit_test.cc
-        db/version_set_test.cc
-        db/wal_manager_test.cc
-        db/wal_edit_test.cc
-        db/wide/db_wide_basic_test.cc
-        db/wide/wide_column_serialization_test.cc
-        db/wide/wide_columns_helper_test.cc
-        db/write_batch_test.cc
-        db/write_callback_test.cc
-        db/write_controller_test.cc
-        env/env_test.cc
-        env/io_posix_test.cc
-        env/mock_env_test.cc
-        file/delete_scheduler_test.cc
-        file/prefetch_test.cc
-        file/random_access_file_reader_test.cc
-        logging/auto_roll_logger_test.cc
-        logging/env_logger_test.cc
-        logging/event_logger_test.cc
-        memory/arena_test.cc
-        memory/memory_allocator_test.cc
-        memtable/inlineskiplist_test.cc
-        memtable/skiplist_test.cc
-        memtable/write_buffer_manager_test.cc
-        monitoring/histogram_test.cc
-        monitoring/iostats_context_test.cc
-        monitoring/statistics_test.cc
-        monitoring/stats_history_test.cc
-        options/configurable_test.cc
-        options/customizable_test.cc
-        options/options_settable_test.cc
-        options/options_test.cc
-        table/block_based/block_based_table_reader_test.cc
-        table/block_based/block_test.cc
-        table/block_based/data_block_hash_index_test.cc
-        table/block_based/full_filter_block_test.cc
-        table/block_based/partitioned_filter_block_test.cc
-        table/cleanable_test.cc
-        table/cuckoo/cuckoo_table_builder_test.cc
-        table/cuckoo/cuckoo_table_reader_test.cc
-        table/merger_test.cc
-        table/sst_file_reader_test.cc
-        table/table_test.cc
-        table/block_fetcher_test.cc
-        test_util/testutil_test.cc
-        trace_replay/block_cache_tracer_test.cc
-        trace_replay/io_tracer_test.cc
-        tools/block_cache_analyzer/block_cache_trace_analyzer_test.cc
-        tools/io_tracer_parser_test.cc
-        tools/ldb_cmd_test.cc
-        tools/reduce_levels_test.cc
-        tools/sst_dump_test.cc
-        tools/trace_analyzer_test.cc
-        util/autovector_test.cc
+#        cache/cache_reservation_manager_test.cc
+#        cache/cache_test.cc
+#        cache/compressed_secondary_cache_test.cc
+#        cache/lru_cache_test.cc
+#        cache/tiered_secondary_cache_test.cc
+#        db/blob/blob_counting_iterator_test.cc
+#        db/blob/blob_file_addition_test.cc
+#        db/blob/blob_file_builder_test.cc
+#        db/blob/blob_file_cache_test.cc
+#        db/blob/blob_file_garbage_test.cc
+#        db/blob/blob_file_reader_test.cc
+#        db/blob/blob_garbage_meter_test.cc
+#        db/blob/blob_source_test.cc
+#        db/blob/db_blob_basic_test.cc
+#        db/blob/db_blob_compaction_test.cc
+#        db/blob/db_blob_corruption_test.cc
+#        db/blob/db_blob_index_test.cc
+#        db/column_family_test.cc
+#        db/compact_files_test.cc
+#        db/compaction/clipping_iterator_test.cc
+#        db/compaction/compaction_job_stats_test.cc
+#        db/compaction/compaction_job_test.cc
+#        db/compaction/compaction_iterator_test.cc
+#        db/compaction/compaction_picker_test.cc
+#        db/compaction/compaction_service_test.cc
+#        db/compaction/tiered_compaction_test.cc
+#        db/comparator_db_test.cc
+#        db/corruption_test.cc
+#        db/cuckoo_table_db_test.cc
+#        db/db_readonly_with_timestamp_test.cc
+#        db/db_with_timestamp_basic_test.cc
+#        db/db_block_cache_test.cc
+#        db/db_bloom_filter_test.cc
+#        db/db_compaction_filter_test.cc
+#        db/db_compaction_test.cc
+#        db/db_clip_test.cc
+#        db/db_dynamic_level_test.cc
+#        db/db_encryption_test.cc
+#        db/db_flush_test.cc
+#        db/db_inplace_update_test.cc
+#        db/db_io_failure_test.cc
+#        db/db_iter_test.cc
+#        db/db_iter_stress_test.cc
+#        db/db_iterator_test.cc
+#        db/db_kv_checksum_test.cc
+#        db/db_log_iter_test.cc
+#        db/db_memtable_test.cc
+#        db/db_merge_operator_test.cc
+#        db/db_merge_operand_test.cc
+#        db/db_options_test.cc
+#        db/db_properties_test.cc
+#        db/db_range_del_test.cc
+#        db/db_rate_limiter_test.cc
+#        db/db_secondary_test.cc
+#        db/db_sst_test.cc
+#        db/db_statistics_test.cc
+#        db/db_table_properties_test.cc
+#        db/db_tailing_iter_test.cc
+#        db/db_test.cc
+#        db/db_test2.cc
+#        db/db_logical_block_size_cache_test.cc
+#        db/db_universal_compaction_test.cc
+#        db/db_wal_test.cc
+#        db/db_with_timestamp_compaction_test.cc
+#        db/db_write_buffer_manager_test.cc
+#        db/db_write_test.cc
+#        db/dbformat_test.cc
+#        db/deletefile_test.cc
+#        db/error_handler_fs_test.cc
+#        db/obsolete_files_test.cc
+#        db/external_sst_file_basic_test.cc
+#        db/external_sst_file_test.cc
+#        db/fault_injection_test.cc
+#        db/file_indexer_test.cc
+#        db/filename_test.cc
+#        db/flush_job_test.cc
+#        db/import_column_family_test.cc
+#        db/listener_test.cc
+#        db/log_test.cc
+#        db/manual_compaction_test.cc
+#        db/memtable_list_test.cc
+#        db/merge_helper_test.cc
+#        db/merge_test.cc
+#        db/options_file_test.cc
+#        db/perf_context_test.cc
+#        db/periodic_task_scheduler_test.cc
+#        db/plain_table_db_test.cc
+#        db/seqno_time_test.cc
+#        db/prefix_test.cc
+#        db/range_del_aggregator_test.cc
+#        db/range_tombstone_fragmenter_test.cc
+#        db/repair_test.cc
+#        db/table_properties_collector_test.cc
+#        db/version_builder_test.cc
+#        db/version_edit_test.cc
+#        db/version_set_test.cc
+#        db/wal_manager_test.cc
+#        db/wal_edit_test.cc
+#        db/wide/db_wide_basic_test.cc
+#        db/wide/wide_column_serialization_test.cc
+#        db/wide/wide_columns_helper_test.cc
+#        db/write_batch_test.cc
+#        db/write_callback_test.cc
+#        db/write_controller_test.cc
+#        env/env_test.cc
+#        env/io_posix_test.cc
+#        env/mock_env_test.cc
+#        file/delete_scheduler_test.cc
+#        file/prefetch_test.cc
+#        file/random_access_file_reader_test.cc
+#        logging/auto_roll_logger_test.cc
+#        logging/env_logger_test.cc
+#        logging/event_logger_test.cc
+#        memory/arena_test.cc
+#        memory/memory_allocator_test.cc
+#        memtable/inlineskiplist_test.cc
+#        memtable/skiplist_test.cc
+#        memtable/write_buffer_manager_test.cc
+#        monitoring/histogram_test.cc
+#        monitoring/iostats_context_test.cc
+#        monitoring/statistics_test.cc
+#        monitoring/stats_history_test.cc
+#        options/configurable_test.cc
+#        options/customizable_test.cc
+#        options/options_settable_test.cc
+#        options/options_test.cc
+#        table/block_based/block_based_table_reader_test.cc
+#        table/block_based/block_test.cc
+#        table/block_based/data_block_hash_index_test.cc
+#        table/block_based/full_filter_block_test.cc
+#        table/block_based/partitioned_filter_block_test.cc
+#        table/cleanable_test.cc
+#        table/cuckoo/cuckoo_table_builder_test.cc
+#        table/cuckoo/cuckoo_table_reader_test.cc
+#        table/merger_test.cc
+#        table/sst_file_reader_test.cc
+#        table/table_test.cc
+#        table/block_fetcher_test.cc
+#        test_util/testutil_test.cc
+#        trace_replay/block_cache_tracer_test.cc
+#        trace_replay/io_tracer_test.cc
+#        tools/block_cache_analyzer/block_cache_trace_analyzer_test.cc
+#        tools/io_tracer_parser_test.cc
+#        tools/ldb_cmd_test.cc
+#        tools/reduce_levels_test.cc
+#        tools/sst_dump_test.cc
+#        tools/trace_analyzer_test.cc
+#        util/autovector_test.cc
         util/bloom_test.cc
-        util/coding_test.cc
-        util/crc32c_test.cc
-        util/defer_test.cc
-        util/dynamic_bloom_test.cc
-        util/file_reader_writer_test.cc
-        util/filelock_test.cc
+#        util/coding_test.cc
+#        util/crc32c_test.cc
+#        util/defer_test.cc
+#        util/dynamic_bloom_test.cc
+#        util/file_reader_writer_test.cc
+#        util/filelock_test.cc
         util/hash_test.cc
         util/heap_test.cc
         util/random_test.cc
-        util/rate_limiter_test.cc
-        util/repeatable_thread_test.cc
+#        util/rate_limiter_test.cc
+#        util/repeatable_thread_test.cc
         util/ribbon_test.cc
+            ribbon_compare_bloom/ribbon_compare_bloom.cc
+        ribbon_compare_bloom/ribbon_compare_bloom_improve.cc
         util/slice_test.cc
         util/slice_transform_test.cc
-        util/timer_queue_test.cc
-        util/timer_test.cc
-        util/thread_list_test.cc
-        util/thread_local_test.cc
-        util/udt_util_test.cc
-        util/work_queue_test.cc
-        utilities/agg_merge/agg_merge_test.cc
-        utilities/backup/backup_engine_test.cc
-        utilities/blob_db/blob_db_test.cc
-        utilities/cassandra/cassandra_functional_test.cc
-        utilities/cassandra/cassandra_format_test.cc
-        utilities/cassandra/cassandra_row_merge_test.cc
-        utilities/cassandra/cassandra_serialize_test.cc
-        utilities/checkpoint/checkpoint_test.cc
-        utilities/env_timed_test.cc
-        utilities/memory/memory_test.cc
-        utilities/merge_operators/string_append/stringappend_test.cc
-        utilities/object_registry_test.cc
-        utilities/option_change_migration/option_change_migration_test.cc
-        utilities/options/options_util_test.cc
-        utilities/persistent_cache/hash_table_test.cc
-        utilities/persistent_cache/persistent_cache_test.cc
-        utilities/simulator_cache/cache_simulator_test.cc
-        utilities/simulator_cache/sim_cache_test.cc
-        utilities/table_properties_collectors/compact_on_deletion_collector_test.cc
-        utilities/transactions/optimistic_transaction_test.cc
-        utilities/transactions/transaction_test.cc
-        utilities/transactions/lock/point/point_lock_manager_test.cc
-        utilities/transactions/write_committed_transaction_ts_test.cc
-        utilities/transactions/write_prepared_transaction_test.cc
-        utilities/transactions/write_unprepared_transaction_test.cc
-        utilities/transactions/lock/range/range_locking_test.cc
-        utilities/transactions/timestamped_snapshot_test.cc
-        utilities/ttl/ttl_test.cc
-        utilities/util_merge_operators_test.cc
-        utilities/write_batch_with_index/write_batch_with_index_test.cc
+#        util/timer_queue_test.cc
+#        util/timer_test.cc
+#        util/thread_list_test.cc
+#        util/thread_local_test.cc
+#        util/udt_util_test.cc
+#        util/work_queue_test.cc
+#        utilities/agg_merge/agg_merge_test.cc
+#        utilities/backup/backup_engine_test.cc
+#        utilities/blob_db/blob_db_test.cc
+#        utilities/cassandra/cassandra_functional_test.cc
+#        utilities/cassandra/cassandra_format_test.cc
+#        utilities/cassandra/cassandra_row_merge_test.cc
+#        utilities/cassandra/cassandra_serialize_test.cc
+#        utilities/checkpoint/checkpoint_test.cc
+#        utilities/env_timed_test.cc
+#        utilities/memory/memory_test.cc
+#        utilities/merge_operators/string_append/stringappend_test.cc
+#        utilities/object_registry_test.cc
+#        utilities/option_change_migration/option_change_migration_test.cc
+#        utilities/options/options_util_test.cc
+#        utilities/persistent_cache/hash_table_test.cc
+#        utilities/persistent_cache/persistent_cache_test.cc
+#        utilities/simulator_cache/cache_simulator_test.cc
+#        utilities/simulator_cache/sim_cache_test.cc
+#        utilities/table_properties_collectors/compact_on_deletion_collector_test.cc
+#        utilities/transactions/optimistic_transaction_test.cc
+#        utilities/transactions/transaction_test.cc
+#        utilities/transactions/lock/point/point_lock_manager_test.cc
+#        utilities/transactions/write_committed_transaction_ts_test.cc
+#        utilities/transactions/write_prepared_transaction_test.cc
+#        utilities/transactions/write_unprepared_transaction_test.cc
+#        utilities/transactions/lock/range/range_locking_test.cc
+#        utilities/transactions/timestamped_snapshot_test.cc
+#        utilities/ttl/ttl_test.cc
+#        utilities/util_merge_operators_test.cc
+#        utilities/write_batch_with_index/write_batch_with_index_test.cc
 	${PLUGIN_TESTS}
     )
   endif()
