--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1587,10 +1587,10 @@ if(WITH_TOOLS)
     DEPENDS ${tool_deps})
 endif()
 
-option(WITH_EXAMPLES "build with examples" OFF)
-if(WITH_EXAMPLES)
-  add_subdirectory(examples)
-endif()
+#option(WITH_EXAMPLES "build with examples" ON)
+#if(WITH_EXAMPLES)
+add_subdirectory(examples)
+#endif()
 
 option(WITH_BENCHMARK "build benchmark tests" OFF)
 if(WITH_BENCHMARK)
